k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envsync-client
  namespace: envsync
spec:
  replicas: 2
  selector:
    matchLabels:
      app: envsync-client
  template:
    metadata:
      labels:
        app: envsync-client
    spec:
      containers:
      - name: envsync-client
        image: envsync-client:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: envsync
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: envsync-client
