k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: envsync-ingress
  namespace: envsync
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: server-service
            port:
              number: 4000
      - path: /()(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: client-service
            port:
              number: 80
